...
            name="movieItemModel"
            type="com.pasaoglu.movieapp.data.model.MovieListItemResponseModel" />
    </data>

    <com.google.android.material.card.MaterialCardView

        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_margin="5dp"
        app:cardCornerRadius="3dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="8dp"
...
                android:layout_marginBottom="5dp"
                android:elevation="2dp"
                android:background="@drawable/bg_avarage_vote"
                android:text="@{movieItemModel.voteAverage.toString()}"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/movieNameTextView"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="7.7" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/movieNameTextView"
                style="@style/TextAppearance.AppCompat.Large"
...
